--- a/src/ext-workspace/apps/myapp/app/Application.scss
+++ b/src/ext-workspace/apps/myapp/app/Application.scss
@@ -3,3 +3,9 @@
  *  styling should be located the view's corresponding scss file.
  */
 $enable-font-awesome: dynamic(true);
+
+//change base color -- the main color
+//$base-color:green;
+//some examples 
+//$button-background-color : orange; 
+
